add All Users Menu And Refactor String Role To Enum Role

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,3 +55,7 @@ register.professor=ثبت استاد
 professor=استاد
 add.student=ثبت دانشجو
 remove.course=حذف دوره
+all.users=کاربران
+user.status=وضعیت کاربر
+delete=حذف
+delete.message=کاربر را حذف میکنید؟
