--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,9 +26,9 @@ register.role=Register as:
 register.role.p=Professor
 register.role.s=Student
 sfl=Registration Successfully Please Wait Until You Receive The Administrator Approval Email
-double.email=Someone has registered with this email before you
-double.national.code=Someone has registered with this National Code before you
-double.username=Someone has registered with this Username before you
+double.email=Someone has registered with this email
+double.national.code=Someone has registered with this National Code
+double.username=Someone has registered with this Username
 manager.dashboard=Manager Dashboard
 pending.users=Pending Users
 courses=Courses
@@ -55,6 +55,10 @@ register.professor=Register Professor
 professor=Professor
 add.student=Register Student
 remove.course=Remove Course
+all.users=Users
+user.status=User Status
+delete=Delete
+delete.message=Delete This User?
 
 
 
