--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -26,9 +26,9 @@ register.role=ثبت نام به عنوان:
 register.role.p=استاد
 register.role.s=دانشجو
 sfl=ثبت نام با موفقیت انجام شد لطفا تا ارسال ایمیل تایید توسط مدیر منتظر بمانید
-double.email=فردی قبل از شما با این ایمیل ثبت نام کرده است
-double.national.code=فردی قبل از شما با این کد ملی ثبت نام کرده است
-double.username=فردی قبل از شما با این نام کاربری ثبت نام کرده است
+double.email=فردی قبلا با این ایمیل ثبت نام کرده است
+double.national.code=فردی قبلا با این کد ملی ثبت نام کرده است
+double.username=فردی قبلا با این نام کاربری ثبت نام کرده است
 manager.dashboard=صفحه ی مدیریت
 pending.users=کاربران در انتظار تایید
 courses=دوره ها
@@ -55,4 +55,7 @@ register.professor=ثبت استاد
 professor=استاد
 add.student=ثبت دانشجو
 remove.course=حذف دوره
-
+all.users=کاربران
+user.status=وضعیت کاربر
+delete=حذف
+delete.message=کاربر را حذف میکنید؟
