--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -59,11 +59,17 @@ all.users=Users
 user.status=User Status
 delete=Delete
 delete.message=Delete This User?
-
-
-
-
-
-
-
-
+professor.dashboard=Professor Panel
+invalid.title=Exam Title Length Must Between 3 And 20 Characters
+invalid.description=Exam Description Length Must Between 3 And 300 Characters
+invalid.time=Exam Time Must Be Minimum 1 Minute
+exams.isEmpty=No exams have been created by you for this course
+title=Title
+description=Description
+time=Time
+minute=Minute
+exam.details=Details
+exams=Exams
+add.exam=Add Exam+
+double.exam=A exam with the same title has already been registered for this course.
+edit.exam=Edit Exam
