--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -59,3 +59,17 @@ all.users=کاربران
 user.status=وضعیت کاربر
 delete=حذف
 delete.message=کاربر را حذف میکنید؟
+professor.dashboard=پنل استاد
+invalid.title=عنوان آزمون باید حداقل 3 و حداکثر 20 حرف باشد
+invalid.description=توضیحات آزمون باید حداقل 3 و حداکثر 300 حرف باشد
+invalid.time=زمان آزمون باید حداقل 1 دقیقه باشد
+exams.isEmpty=هیچ آزمونی برای این دوره توسط شما ایجاد نشده است
+title=عنوان
+description=توضیحات
+time=زمان
+minute=دقیقه
+exam.details=جزئیات
+exams=آزمون ها
+add.exam=افزودن آزمون+
+double.exam=آزمونی قبلا با همین عنوان برای این دوره ثبت شده است
+edit.exam=ویرایش آزمون
