--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -73,3 +73,23 @@ exams=Exams
 add.exam=Add Exam+
 double.exam=A exam with the same title has already been registered for this course.
 edit.exam=Edit Exam
+question.bank=Questions Bank
+question=Question
+multi.choice=Multi Choice
+essay=Essay
+question.type=Question Type
+add.question=Add Question+
+add.choice=Add Choice+
+length.question.question=Question Must Be Minimum 5 Characters
+length.title.question=Question Title Must Be Minimum 3 And Maximum 10 Characters
+choices.invalid=For MutiChoice Question Must Have Minimum 2 Choice And All Choices Must Not Be Empty
+correct.choice.invalid=Please Choose One Choice For CorrectChoice
+questions=Questions
+question.grade=Grade
+double.question.title=A Question for this course has already registered with this title
+save.in.bank=Save In Question Bank?
+edit.add=Edit And Add
+total.grade=Total Grade
+grade.invalid=Grade Must Not Be Empty , Zero Or Negative
+
+
