--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -73,3 +73,22 @@ exams=آزمون ها
 add.exam=افزودن آزمون+
 double.exam=آزمونی قبلا با همین عنوان برای این دوره ثبت شده است
 edit.exam=ویرایش آزمون
+question.bank=بانک سوالات
+question=سوال
+multi.choice=چند گزینه ای
+essay=تشریحی
+question.type=نوع سوال
+add.question=افزودن سوال+
+add.choice=افزودن گزینه+
+length.question.question=صورت سوال باید حداقل 5 حرف باشد
+length.title.question=عنوان سوال باید حداقل 3 و حداکثر 10 حرف باشد
+choices.invalid=برای سوال چند گزینه ای باید حداقل 2 گزینه وجود داشته باشد و هیچ گزینه ای خالی نباشد
+correct.choice.invalid=لطفا یک گزینه رو به عنوان گزینه ی درست انتخاب کنید
+questions=سوالات
+question.grade=نمره
+double.question.title=سوالی با همین عنوان قبلا برای این دوره ثبت کرده اید
+save.in.bank=در بانک سوالات ذخیره شود؟
+edit.add=ویرایش و ثبت
+total.grade=نمره ی کل
+grade.invalid=نمره نباید خالی یا صفر یا منفی باشد
+
