--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,7 +63,7 @@ professor.dashboard=Professor Panel
 invalid.title=Exam Title Length Must Between 3 And 20 Characters
 invalid.description=Exam Description Length Must Between 3 And 300 Characters
 invalid.time=Exam Time Must Be Minimum 1 Minute
-exams.isEmpty=No exams have been created by you for this course
+exams.isEmpty=This course does not have any Exam
 title=Title
 description=Description
 time=Time
@@ -91,5 +91,9 @@ save.in.bank=Save In Question Bank?
 edit.add=Edit And Add
 total.grade=Total Grade
 grade.invalid=Grade Must Not Be Empty , Zero Or Negative
-
+student.dashboard=Student Panel
+exam.start=Start Exam
+previous=Previous
+next=Next
+register.answers=Register Answers
 
