--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -63,7 +63,7 @@ professor.dashboard=پنل استاد
 invalid.title=عنوان آزمون باید حداقل 3 و حداکثر 20 حرف باشد
 invalid.description=توضیحات آزمون باید حداقل 3 و حداکثر 300 حرف باشد
 invalid.time=زمان آزمون باید حداقل 1 دقیقه باشد
-exams.isEmpty=هیچ آزمونی برای این دوره توسط شما ایجاد نشده است
+exams.isEmpty=هیچ آزمونی برای این دوره وجود ندارد
 title=عنوان
 description=توضیحات
 time=زمان
@@ -91,4 +91,8 @@ save.in.bank=در بانک سوالات ذخیره شود؟
 edit.add=ویرایش و ثبت
 total.grade=نمره ی کل
 grade.invalid=نمره نباید خالی یا صفر یا منفی باشد
-
+student.dashboard=پنل دانشجو
+exam.start=شروع آزمون
+previous=قبلی
+next=بعدی
+register.answers=ثبت پاسخ ها
