--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -96,4 +96,10 @@ exam.start=Start Exam
 previous=Previous
 next=Next
 register.answers=Register Answers
-
+notCorrection.exams=not corrected exams
+correction.exams=corrected exams
+correction=Correction
+register.grade=Register Grade
+finally.register=Finally Register
+grade.err=Please Enter Grades In Provided Range
+fill.all.grades=Please Register All Grades
