--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -96,3 +96,11 @@ exam.start=شروع آزمون
 previous=قبلی
 next=بعدی
 register.answers=ثبت پاسخ ها
+notCorrection.exams=امتحانات تصحیح نشده
+correction.exams=امتحانات تصحیح شده
+correction=تصحیح
+register.grade=ثبت نمره
+finally.register=ثبت نهایی
+grade.err=لطفا نمره را بین بازه داده شده وارد کنید
+fill.all.grades=لطفا تمام نمره ها را ثبت کنید
+
