--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -103,3 +103,4 @@ register.grade=ثبت نمره
 finally.register=ثبت نهایی
 grade.err=لطفا نمره را بین بازه داده شده وارد کنید
 fill.all.grades=لطفا تمام نمره ها را ثبت کنید
+change.to.notCorrection=تغییر به تصحیح نشده
