--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -103,3 +103,4 @@ register.grade=Register Grade
 finally.register=Finally Register
 grade.err=Please Enter Grades In Provided Range
 fill.all.grades=Please Register All Grades
+change.to.notCorrection=Change To Not Corrected
