--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -103,4 +103,5 @@ register.grade=ثبت نمره
 finally.register=ثبت نهایی
 grade.err=لطفا نمره را بین بازه داده شده وارد کنید
 fill.all.grades=لطفا تمام نمره ها را ثبت کنید
+change.to.notCorrection=تغییر به تصحیح نشده
 
